[gd_scene load_steps=3 format=3 uid="uid://q8lqams268g2"]

[ext_resource type="Texture2D" uid="uid://1nuka8ut5kj" path="res://Placeholder/wood_1.png" id="1_m1cqy"]
[ext_resource type="Script" path="res://Scripts/InventorySlot.gd" id="1_surt7"]

[node name="InventorySlot" type="TextureButton"]
z_index = 1
scale = Vector2(10, 10)
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("1_m1cqy")
stretch_mode = 4
script = ExtResource("1_surt7")

[node name="QuantityLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -1.2
offset_top = -9.2
offset_right = 91.8
offset_bottom = 69.8
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/normal_font_size = 50
text = "1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
